--- a/presentation/index.html
+++ b/presentation/index.html
@@ -456,8 +456,282 @@
          <p>/*と*/で囲めばコメントアウトできる</p>
         </section>
         <section>
-          <h2>color</h2>
-          <p>文字の色を変える</p>
+          <section>
+            <h2>color</h2>
+            <p>文字の色を変える</p>
+            <p>html</p>
+            <pre><code class="html" data-trim>
+              <p>こんにちは</p>
+            </code></pre>
+            <p>css</p>
+            <pre><code class="css" data-trim>
+              p {
+                color: red;
+              }
+            </code></pre>
+            <div class="white">
+              <p style="color:red">こんにちは</p>
+            </div>
+          </section>
+          <section>
+            <p>色の指定方法は色々ある</p>
+            <ul>
+              <li>キーワード指定
+                <pre><code class="css" data-trim>
+                  p {
+                    color: red;
+                  }
+                </code></pre>
+              </li>
+              <li>RGB指定
+                <pre><code class="css" data-trim>
+                  p {
+                    color: #ff0000;
+                  }
+                </code></pre>
+              </li>
+            </ul>
+          </section>
+        </section>
+        <section>
+          <section>
+            <h2>font-size</h2>
+            <p>文字の大きさ変える</p>
+            <pre><code class="html" data-trim>
+              <p>こんにちは</p>
+            </code></pre>
+            <pre><code class="css" data-trim>
+              p {
+                font-size: 100px;
+              }
+            </code></pre>
+            <div class="white">
+              <p style="font-size: 100px">こんにちは</p>
+            </div>
+          </section>
+          <section>
+            <h2>font-weight</h2>
+            <p>文字の太さを変える</p>
+            <pre><code class="html" data-trim>
+              <p>こんにちは</p>
+            </code></pre>
+            <pre><code class="css" data-trim>
+              p {
+                font-weight: bold;
+              }
+            </code></pre>
+            <div class="white">
+              <p style="font-weight: bold">こんにちは</p>
+            </div>
+          </section>
+        </section>
+        <section>
+          <section>
+            <h2>text-align</h2>
+            <p>行揃えの位置を指定する</p>
+            <pre><code class="html" data-trim>
+              <p class="first">おはよう</p>
+              <p class="second">こんにちは</p>
+              <p class="third">こんばんは</p>
+            </code></pre>
+            <pre><code class="css" data-trim>
+              .first {
+                text-align: left;
+              }
+
+              .second {
+                text-align: center;
+              }
+
+              .third {
+                text-align: right;
+              }
+            </code></pre>
+          </section>
+          <section>
+            <div class="white">
+              <p style="text-align: left">おはよう</p>
+              <p style="text-align: center">こんにちは</p>
+              <p style="text-align: right">こんばんは</p>
+            </div>
+          </section>
+        </section>
+        <section>
+          <h2>line-height</h2>
+          <p>行の高さを指定する</p>
+          <pre><code class="html" data-trim>
+            <p>行の高さを変えられるよ.行の高さを変えられるよ.
+              行の高さを変えられるよ.行の高さを変えられるよ.
+              行の高さを変えられるよ.行の高さを変えられるよ.</p>
+          </code></pre>
+          <pre><code class="css" data-trim>
+            p {
+              line-height: 70px;
+            }
+          </code></pre>
+          <div class="white">
+            <p style="line-height: 70px">行の高さを変えられるよ.行の高さを変えられるよ.
+              行の高さを変えられるよ.行の高さを変えられるよ.
+              行の高さを変えられるよ.行の高さを変えられるよ.</p>
+          </div>
+        </section>
+        <section>
+          <section>
+            <h2>background-color</h2>
+            <p>背景色を指定する</p>
+            <pre><code class="html" data-trim>
+              <div class="aka">
+                <p>背景は赤色</p>
+              </div>
+            </code></pre>
+            <pre><code class="css" data-trim>
+              .aka {
+                background-color: red;
+              }
+            </code></pre>
+            <div class="white">
+              <div style="background-color: red">
+                <p>背景は赤色</p>
+              </div>
+            </div>
+          </section>
+          <section>
+            <h2>background-image</h2>
+            <p>背景画像を指定する</p>
+            <pre><code class="html" data-trim>
+              <div class="jurakudai">
+                <p>背景は聚楽第ロゴ</p>
+                <p>背景は聚楽第ロゴ</p>
+                <p>背景は聚楽第ロゴ</p>
+              </div>
+            </code></pre>
+            <pre><code class="css" data-trim>
+              .jurakudai {
+                background-image: url('./img/jurakudai_logo.png');
+              }
+            </code></pre>
+            <div class="white">
+              <div style="background-image: url('./img/jurakudai_logo.png')">
+                <p>背景は聚楽第ロゴ</p>
+                <p>背景は聚楽第ロゴ</p>
+                <p>背景は聚楽第ロゴ</p>
+              </div>
+            </div>
+          </section>
+        </section>
+        <section>
+          <h2>border</h2>
+          <p>枠線を指定する</p>
+          <pre><code class="html" data-trim>
+            <div class="wakusen">
+              <p>枠線を付けられる</p>
+            </div>
+          </code></pre>
+          <pre><code class="css" data-trim>
+            .wakusen {
+              border: solid red;
+            }
+          </code></pre>
+          <div class="white">
+            <div style="border: solid red">
+              <p>枠線を付けられる</p>
+            </div>
+          </div>
+        </section>
+        <section>
+          <section>
+            <h2>widthとheight</h2>
+            <p>widthは幅を, heightは高さを指定する</p>
+            <pre><code class="html" data-trim>
+              <div class="wide">
+                <p>横長</p>
+              </div>
+              <div class="height">
+                <p>縦長</p>
+              </div>
+            </code></pre>
+            <pre><code class="css" data-trim>
+              .wide {
+                width:
+                height:
+                border: solid red;
+              }
+
+              .high {
+                width:
+                height:
+                border: solid blue;
+              }
+            </code></pre>
+          </section>
+          <section>
+            <div class="white">
+              <div class="wide" style="width: 300px; height: 100px; border: solid red;">
+                <p>横長</p>
+              </div>
+              <div class="height" style="width: 100px; height: 300px; border: solid blue;">
+                <p>縦長</p>
+              </div>
+            </div>
+          </section>
+        </section>
+        <section>
+          <h2>marginとpadding</h2>
+          <p>margin: 要素の外側の余白</p>
+          <p>padding: 要素の内側の余白</p>
+          <p>参考: <a href="http://scene-live.com/page.php?page=49">http://scene-live.com/page.php?page=49</a></p>
+        </section>
+        <section>
+          <section>
+            <h2>float</h2>
+            <p>要素を横並びにできる</p>
+            <pre><code class="html" data-trim>
+              <div class="yokonarabi">
+                1個目
+              </div>
+              <div class="yokonarabi">
+                2個目
+              </div>
+              <div class="yokonarabi">
+                3個目
+              </div>
+            </code></pre>
+            <div class="white">
+              <div class="yokonarabi">
+                1個目
+              </div>
+              <div class="yokonarabi">
+                2個目
+              </div>
+              <div class="yokonarabi">
+                3個目
+              </div>
+            </div>
+          </section>
+          <section>
+            <pre><code class="css" data-trim>
+              .yokonarabi {
+                float: left;
+              }
+            </code></pre>
+            <div class="white" style="height: 100px">
+              <div class="yokonarabi" style="float: left">
+                1個目
+              </div>
+              <div class="yokonarabi" style="float: left">
+                2個目
+              </div>
+              <div class="yokonarabi" style="float: left">
+                3個目
+              </div>
+            </div>
+          </section>
+        </section>
+        <section>
+          <h2>position</h2>
+        </section>
+        <section>
+          <h2>z-index</h2>
         </section>
 			</div>
 		</div>
