--- a/presentation/index.html
+++ b/presentation/index.html
@@ -149,6 +149,20 @@
           </div>
         </section>
         <section>
+          <h2>Googlability</h2>
+          <p>なんだかんだGooglability(ググる力)が大事です</p>
+        </section>
+        <section>
+          <h2>検証を上手く使いましょう</h2>
+          <p>やってみせます</p>
+        </section>
+        <section>
+          <h2>Bootstrap</h2>
+          <p>cssのフレームワーク</p>
+          <p>お手軽にデザインをいい感じにできる</p>
+          <p>けど、今日は使いません</p>
+        </section>
+        <section>
           <h2>ここからは一旦htmlの説明</h2>
         </section>
         <section>
