またまた修正

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -26,7 +26,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-          <h1>カフェはしご</h1>
+          <h1>カフェはしご＃</h1>
           <h2>Hackathon編</h2>
         </section>
 				<section>
