--- a/reports.html
+++ b/reports.html
@@ -8,7 +8,7 @@
   <body>
     <div class="header">
       <span class="header_title">
-        <a href="#">カフェはしご.jp</a>
+        <a href="./index.html">カフェはしご.jp</a>
       </span>
       <span class="header_tab header_tab_last">
         <a href="./contact.html">Contact</a>
@@ -16,11 +16,11 @@
       <span class="header_tab">
         <a href="./schedule.html">Schedule</a>
       </span>
-      <span class="header_tab">
-        <a href="./reports.html">Reports</a>
-      </span>
       <span class="header_tab header_tab_selected">
-        <a href="#">Home</a>
+        <a href="#">Reports</a>
+      </span>
+      <span class="header_tab">
+        <a href="./index.html">Home</a>
       </span>
     </div>
     <!-- ここからコンテンツ -->
