--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
   <body>
     <div class="header">
       <span class="header_title">
-        <a href="#">カフェはしご.jp</a>
+        <a href="./index.html">カフェはしご.jp</a>
       </span>
-      <span class="header_tab header_tab_last">
+      <span class="header_tab header_tab_selected header_tab_last">
         <a href="./contact.html">Contact</a>
       </span>
       <span class="header_tab">
@@ -19,8 +19,8 @@
       <span class="header_tab">
         <a href="./reports.html">Reports</a>
       </span>
-      <span class="header_tab header_tab_selected">
-        <a href="#">Home</a>
+      <span class="header_tab">
+        <a href="./index.html">Home</a>
       </span>
     </div>
     <!-- ここからコンテンツ -->
