--- a/schedule.html
+++ b/schedule.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/schedule.css">
     <title>カフェはしご.jp</title>
   </head>
   <body>
@@ -25,6 +25,15 @@
     </div>
     <!-- ここからコンテンツ -->
     <div>
+      <h2>次回のカフェはしご．．．</h2>
+        <ul id="next_event_info">
+          <li class="year_month_date">2017.8.15</li>
+          <li class="time_schedule">11:00 ~ 18:00</li>
+          <li class="theme">PHOTOGENIC京都</li>
+          <li class="meeting_point">At Five Cafe</li>
+          <p class="content">次回は京都のPHOTOGENICなスポットを撮影しながらカフェはしご。<br>写真を学ぶがテーマです。</p>
+          <button id="apply_button">参加希望の方はこちら</button>
+        </ul>
     </div>
     <!-- ここまでコンテンツ -->
   </body>
