--- a/index.html
+++ b/index.html
@@ -24,8 +24,27 @@
       </span>
     </div>
     <!-- ここからコンテンツ -->
-    <div>
-    </div>
+    <div id="wrap">
+      <div id="keyVisual">
+        <img src="img/keyV02.jpg" alt="カフェの写真">
+      </div><!-- #keyVisual -->
+
+      <div id="about">
+        <h1>What's "カフェはしご"<br><span>～カフェはしごという文化～</span></h1>
+        <p>ここからは、カフェはしごのコンセプト説明です。カフェはしごとは何なのか。わたしたちが考えるカフェはしごの文化とは。</p>
+      </div><!-- #about -->
+
+      <div id="inner-wrap-news">
+      <div id="news">
+        <h1>News</h1>
+        <ul>
+          <li>17.07.31 Reportsに第１回カフェはしごの模様をupしました</li>
+          <li>17.07.24 第１回カフェはしごを開催しました</li>
+          <li>17.07.17 サイトをオープンしました</li>
+        </ul>
+      </div><!-- #news -->
+    </div><!-- #innner-wrap-news -->
+    </div><!-- #wrap -->
     <!-- ここまでコンテンツ -->
   </body>
 </html>
