--- a/reports.html
+++ b/reports.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/reports.css">
     <title>カフェはしご.jp</title>
   </head>
   <body>
@@ -24,8 +24,53 @@
       </span>
     </div>
     <!-- ここからコンテンツ -->
-    <div>
-    </div>
+    <h1 id="title">〜 かけてきたはしご達 〜</h1>
     <!-- ここまでコンテンツ -->
+    <div class="waku-big">
+      <ul class="waku">
+        <li class="moji">
+          <a class="text-white" href="">おしゃべり編</a>
+        </li>
+        <li class="moji">
+          <a class="text-white" href="">猫カフェ編</a>
+        </li>
+        <li class="moji">
+          <a class="text-white" href="">エンジニア編</a>
+        </li>
+        <li class="moji">
+          <a class="text-white" href="">こだわり編</a>
+        </li>
+        <li class="moji">
+          <a class="text-white" href="">読書編</a>
+        </li>
+        <li class="moji">
+          <a class="text-white" href="">デート編</a>
+        </li>
+      </ul>
+    </div>
+    <div class="contents">
+      <div class="contents-wrap">
+       <table class="contents-small" border="none">
+          <tr>
+            <th class="no_border">写真</th>
+            <th class="no_border">エンジニア編</th>
+          </tr>
+          <tr>
+            <td class="no_border"></td>
+            <td class="no_border">軽い詳細</td>
+          </tr>
+          <tr>
+            <td class="no_border"></td>
+            <td class="no_border">ユーザー名</td>
+            <td class="no_border">17.07.24</td>
+          </tr>
+          <tr>
+            <td class="no_border"></td>
+            <td class="no_border">コメント</td>
+            <td class="no_border">いいね</td>
+          </tr>
+       </table>
+     </div>
+    </div>
   </body>
 </html>
