--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>カフェはしご.jp</title>
   </head>
   <body>
+  <!-- This is a comment from Nathan -->
     <div class="header">
       <span class="header_title">
         <a href="#">カフェはしご.jp</a>
